--- a/pom.xml
+++ b/pom.xml
@@ -10,21 +10,34 @@
     <version>1.0.0</version>
     <packaging>war</packaging>
 
+    <!-- ===================== -->
+    <!-- JAVA VERSION (MATCH DOCKER: 17) -->
+    <!-- ===================== -->
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
 
         <!-- ===================== -->
-        <!-- Servlet API (Tomcat) -->
+        <!-- Servlet API (Tomcat 9 uses javax) -->
         <!-- ===================== -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- ===================== -->
+        <!-- JSP API -->
+        <!-- ===================== -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
 
@@ -62,7 +75,7 @@
         </dependency>
 
         <!-- ===================== -->
-        <!-- PDF (OpenPDF – REQUIRED) -->
+        <!-- PDF (OpenPDF) -->
         <!-- ===================== -->
         <dependency>
             <groupId>com.github.librepdf</groupId>
@@ -77,18 +90,22 @@
 
         <plugins>
 
-            <!-- Java Compiler -->
+            <!-- ===================== -->
+            <!-- Maven Compiler Plugin -->
+            <!-- ===================== -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
 
-            <!-- WAR Plugin (IMPORTANT for Eclipse/Tomcat) -->
+            <!-- ===================== -->
+            <!-- Maven WAR Plugin -->
+            <!-- ===================== -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
