--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,15 @@
             <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Excel Reader -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi-ooxml</artifactId>
+    <version>5.2.5</version>
+</dependency>
+
+
+
 
         <!-- ===================== -->
         <!-- JSTL -->
@@ -82,6 +91,17 @@
             <artifactId>openpdf</artifactId>
             <version>1.3.30</version>
         </dependency>
+        
+        
+        
+        
+        <!-- iText (lowagie) for PDF generation -->
+<dependency>
+    <groupId>com.lowagie</groupId>
+    <artifactId>itext</artifactId>
+    <version>2.1.7</version>
+</dependency>
+
 
     </dependencies>
 
